# space

./: .gitignore  CMakeLists.txt  dump.md
log/.obsidian/: workspace.json
src/: main.cpp
